add firefox/journald/psd dotfiles

--- a/etc/makepkg.conf
+++ b/etc/makepkg.conf
@@ -32,7 +32,9 @@ CHOST="x86_64-unknown-linux-gnu"
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
 CFLAGS="-march=native -O2 -pipe -fstack-protector --param=ssp-buffer-size=4 -fdiagnostics-color=auto" # -flto
 CXXFLAGS="${CFLAGS}"
-LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro  -Wl,--enable-new-dtags  -Wl,--hash-style=gnu -Wl,-flto" # --fuse-ld=gold #  Bdirect  # -zdynsort # -hashvals #  -Wl,-flto ### -Wl,--hash-style=gnu ###  -Wl,--enable-new-dtags
+LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro  -Wl,--enable-new-dtags  -Wl,--hash-style=gnu -Wl,-flto" # Bdirect # -zdynsort # -hashvals # -Wl,-flto ### -Wl,--hash-style=gnu ###  -Wl,--enable-new-dtags
+#LDFLAGS="${LDFLAGS} -B/usr/bin/ld.gold" #use gold linker with clang
+#LDFLAGS="${LDFLAGS} -fuse-ld=gold"      #use gold linker with gcc
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j8"
 #-- Debugging flags
@@ -112,7 +114,7 @@ SRCPKGDEST=/home/build/srcpackages-$USER
 #-- Log files: specify a fixed directory where all log files will be placed
 LOGDEST=/home/build/makepkglogs
 #-- Packager: name/email of the person or organization building packages
-PACKAGER="Moez Bouhlel <lejenome@lejenome-pc>"
+PACKAGER="Moez Bouhlel <bmoez.j@gmail.com>"
 #-- Specify a key to use for package signing
 #GPGKEY=""
 
