--- a/etc/systemd/system/getmails.service
+++ b/etc/systemd/system/getmails.service
@@ -3,9 +3,8 @@ Description=Get mails using getmails command
 JobTimeoutSec=2min
 
 [Service]
-ExecStart=/usr/bin/getmails
+ExecStart=/home/lejenome/.local/bin/getmails
 User=lejenome
-Group=lejenome
 Nice=19
 IOSchedulingClass=best-effort
 IOSchedulingPriority=7
