support radeon dpm, ath9k ps_mode, add extra mount options, update htoprc and journld.conf

--- a/etc/systemd/journald.conf
+++ b/etc/systemd/journald.conf
@@ -12,8 +12,8 @@ Storage=volatile
 Compress=yes
 Seal=yes
 SplitMode=uid
-SystemMaxUse=5
-RuntimeMaxUse=3
+SystemMaxUse=10M
+RuntimeMaxUse=20M
 SyncIntervalSec=10m
 #RuntimeKeepFree=
 #SystemKeepFree=
