extra dotfiles and fixes

--- a/etc/makepkg.conf
+++ b/etc/makepkg.conf
@@ -1,23 +1,12 @@
-#
-# /etc/makepkg.conf
-#
-
 #########################################################################
 # SOURCE ACQUISITION
 #########################################################################
-#
-#-- The download utilities that makepkg should use to acquire sources
 #  Format: 'protocol::agent'
 DLAGENTS=('ftp::/usr/bin/curl -fC - --ftp-pasv --retry 3 --retry-delay 3 -o %o %u'
           'http::/usr/bin/curl -fLC - --retry 3 --retry-delay 3 -o %o %u'
           'https::/usr/bin/curl -fLC - --retry 3 --retry-delay 3 -o %o %u'
           'rsync::/usr/bin/rsync --no-motd -z %u %o'
           'scp::/usr/bin/scp -C %u %o')
-
-# Other common tools:
-# /usr/bin/snarf
-# /usr/bin/lftpget -c
-# /usr/bin/wget
 
 #########################################################################
 # ARCHITECTURE, COMPILE FLAGS
@@ -26,9 +15,9 @@ DLAGENTS=('ftp::/usr/bin/curl -fC - --ftp-pasv --retry 3 --retry-delay 3 -o %o %
 CARCH="x86_64"
 CHOST="x86_64-unknown-linux-gnu"
 
-#-- Compiler and Linker Flags
-# -march (or -mcpu) builds exclusively for an architecture
-# -mtune optimizes for an architecture, but builds for whole processor family
+CC=${CC:gcc}
+CXX=${CXX:g++}
+
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
 CFLAGS="-march=native -O2 -pipe -fstack-protector --param=ssp-buffer-size=4 -fdiagnostics-color=auto" # -flto
 CXXFLAGS="${CFLAGS}"
@@ -44,9 +33,6 @@ DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
 #########################################################################
 # BUILD ENVIRONMENT
 #########################################################################
-#
-# Defaults: BUILDENV=(fakeroot !distcc color !ccache check !sign)
-#  A negated environment option will do the opposite of the comments below.
 #
 #-- fakeroot: Allow building packages as a non-root user
 #-- distcc:   Use the Distributed C/C++/ObjC compiler
