--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/zsh-users/zsh-syntax-highlighting
 [submodule "~/.urxvt/ext"]
 	path = ~/.urxvt/ext
-	url = https://github.com/muennich/urxvt-perls
+	url = git://github.com/muennich/urxvt-perls
