--- a/~/.conkyrc
+++ b/~/.conkyrc
@@ -5,24 +5,26 @@ short_units yes
 update_interval 1
 update_interval_on_battery 3
 override_utf8_locale yes
+format_human_readable yes
+use_xft yes
 
 TEXT
 
 [\
 # CPU temperature:
-{"full_text":"CPU","color":"\#545454","separator":false,"separator_block_width":6},\
+{"full_text":"CPU \uF109","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${if_match ${acpitemp}<45}${acpitemp}°C","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
 {"full_text":"${if_match ${acpitemp}<55}${acpitemp}°C","color":"\#b27d12","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
-{"full_text":"${if_match ${acpitemp}>=55}${acpitemp}°C","color":"\#924020","separator":false,"separator_block_width":6},\
+{"full_text":"${if_match ${acpitemp}>=55}${acpitemp}°C","color":"\#a25030","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
 {"full_text":"${endif}${endif}${endif}"},\
-#NETWORK STRENGTH
-{"full_text":"NET","color":"\#545454","separator":false,"separator_block_width":6},\
+#NETWORK STRENGTH \uF012
+{"full_text":"NET \uF1eb","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${execi 2 ~/.conky/getNetwokStrength.sh}","color":"\#909737","separator":false},\
 # Download:
-{"full_text":"DOWN","color":"\#545454","separator":false,"separator_block_width":6},\
+{"full_text":"DOWN \uF0ed","color":"\#949494","separator":false,"separator_block_width":6},\
 ${if_match ${downspeedf enp9s0}>0} \
 {"full_text":"${if_match ${downspeedf enp9s0}<1000}${downspeed enp9s0}","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
@@ -48,7 +50,7 @@ ${else}\
 ${endif}\
 ${endif}\
 # Upload:
-{"full_text":"UP","color":"\#545454","separator":false,"separator_block_width":6},\
+{"full_text":"UP \uF0ee","color":"\#949494","separator":false,"separator_block_width":6},\
 ${if_match ${upspeedf enp9s0}>0} \
 {"full_text":"${if_match ${upspeedf enp9s0}<1000}${upspeed enp9s0}","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
@@ -73,27 +75,27 @@ ${else}\
 {"full_text":"${endif}${endif}${endif}"},\
 ${endif}\
 ${endif}\
-# Memory:
-{"full_text":"MEM","color":"\#545454","separator":false,"separator_block_width":6},\
-{"full_text":"${if_match ${memperc}<30}≣ ${memeasyfree}","color":"\#909737","separator":false,"separator_block_width":6},\
+# Memory: \uF30d
+{"full_text":"MEM \uF1c0","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"${if_match ${memperc}<30} ${memeasyfree}","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
-{"full_text":"${if_match ${memperc}<70}≣ ${memeasyfree}","color":"\#b27d12","separator":false,"separator_block_width":6},\
+{"full_text":"${if_match ${memperc}<70} ${memeasyfree}","color":"\#b27d12","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
-{"full_text":"${if_match ${memperc}>=70}≣ ${memeasyfree}","color":"\#924020","separator":false,"separator_block_width":6},\
+{"full_text":"${if_match ${memperc}>=70} ${memeasyfree}","color":"\#924020","separator":false,"separator_block_width":6},\
 {"full_text":"${endif}${endif}${endif}"},\
 # CPU:
-{"full_text":"CPU","color":"\#545454","separator":false,"separator_block_width":6},\
+{"full_text":"CPU \uF0e4","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${if_match ${cpu cpu0}<50}${cpu cpu0}%","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
 {"full_text":"${if_match ${cpu cpu0}<60E}${cpu cpu0}%","color":"\#b27d12","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
 {"full_text":"${if_match ${cpu cpu0}<=100}${cpu cpu0}%","color":"\#924020","separator":false,"separator_block_width":6},\
 {"full_text":"${endif}${endif}${endif}"},\
-# Weather:
-{"full_text":"T","color":"\#545454","separator":false,"separator_block_width":6},\
+# Weather: \uF3b6
+{"full_text":"T \uF185","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${execpi 3600 ~/.conky/weather.sh}°","color":"\#909737","separator":false,"separator_block_width":6},\
-# Mail:
-{"full_text":"MAIL","color":"\#545454","separator":false,"separator_block_width":6},\
+# Mail: \uF1fa
+{"full_text":"MAIL \uF3e5","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${if_match ${execpi 60 ls ~/mail/new |wc -l}<=0}${execpi 60 ls ~/mail/new |wc -l}","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
 {"full_text":"${if_match ${execpi 60 ls ~/mail/new |wc -l}<=2}${execpi 60 ls ~/mail/new |wc -l}","color":"\#b27d12","separator":false,"separator_block_width":6},\
@@ -101,7 +103,7 @@ ${endif}\
 {"full_text":"${if_match ${execpi 60 ls ~/mail/new |wc -l}>2}${execpi 60 ls ~/mail/new |wc -l}","color":"\#924020","separator":false,"separator_block_width":6},\
 {"full_text":"${endif}${endif}${endif}"},\
 # Battery:
-{"full_text":"BAT","color":"\#545454","separator":false,"separator_block_width":6},\
+{"full_text":"BAT \uF214","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${if_match ${battery_percent}<30}${battery_percent}%","color":"\#924020","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
 {"full_text":"${if_match ${battery_percent}<70}${battery_percent}%","color":"\#b27d12","separator":false,"separator_block_width":6},\
@@ -109,12 +111,14 @@ ${endif}\
 {"full_text":"${if_match ${battery_percent}>=70}${battery_percent}%","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${endif}${endif}${endif}"},\
 # Volume:
-{"full_text":"VOL","color":"\#545454","separator":false,"separator_block_width":6},\
-{"full_text":"♪ ${execi 1 amixer sget Master,0 | egrep -o '([0-9]+%|\[(on|off)\])' | sed ':a;N;$!ba;s/\n/ /g'}","color":"\#909737","separator":false},\
+{"full_text":"VOL \uF028","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"${execi 1 amixer sget Master,0 | egrep -o '([0-9]+%|\[(on|off)\])' | sed ':a;N;$!ba;s/\n/ /g'}","color":"\#909737","separator":false},\
 # Date:
-{"full_text":"|","color":"\#545454","separator":false,"separator_block_width":6},\
+{"full_text":"|","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF073","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${time %d/%m/%y}","color":"\#aaaaaa","separator":false,"separator_block_width":6},\
 # Time:
-{"full_text":"|","color":"\#545454","separator":false,"separator_block_width":6},\
+{"full_text":"|","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF017","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${time %H:%M}","color":"\#aaaaaa","separator":false}\
 ],
