--- a/~/.gitconfig
+++ b/~/.gitconfig
@@ -72,7 +72,7 @@
 	chunkyadd = add --patch           # stage commits chunk by chunk
 	b = branch -v                     # branch (verbose)
 	c = commit -m                     # commit with message
-	ca = commit -a -m                 # commit all with message
+	ca = commit -am                   # commit all with message
 	ci = commit                       # commit
 	amend = commit --amend            # ammend your last commit
 	ammend = commit --amend           # ammend your last commit
@@ -115,9 +115,6 @@
 
 	# Pull in remote changes for the current repository and all its submodules
 	p = !"git pull; git submodule foreach git pull origin master"
-
-	# Commit all changes
-	ca = !git add -A && git commit -av
 
 	# Switch to a branch, creating it if necessary
 	go = "!f() { git checkout -b \"$1\" 2> /dev/null || git checkout \"$1\"; }; f"
