update dotfiles of asd & customizepkg & makepkg

--- a/etc/asd.conf
+++ b/etc/asd.conf
@@ -1,4 +1,3 @@
-WHATTOSYNC=( '/mnt/Others/git/dotfiles/~' '/mnt/Others/git/dotfiles/etc' "$HOME/.mutt"
-"$HOME/.weechat" "$HOME/.cmus/" "$HOME/.vimperator/info" )
+WHATTOSYNC=( "/home/lejenome/.cmus" "/home/lejenome/mail" "/home/lejenome/.vimperator/info" "/home/lejenome/.weechat" ) #'/mnt/Others/git/dotfiles/~'
 
 VOLATILE="/dev/shm"
