--- a/etc/makepkg.conf
+++ b/etc/makepkg.conf
@@ -15,17 +15,17 @@ DLAGENTS=('ftp::/usr/bin/curl -fC - --ftp-pasv --retry 3 --retry-delay 3 -o %o %
 CARCH="x86_64"
 CHOST="x86_64-unknown-linux-gnu"
 
-CC=${CC:gcc}
-CXX=${CXX:g++}
+CC=${CC:-gcc}
+CXX=${CXX:-g++}
 
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
 CFLAGS="-march=native -O2 -pipe -fstack-protector --param=ssp-buffer-size=4 -fdiagnostics-color=auto" # -flto
 CXXFLAGS="${CFLAGS}"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro  -Wl,--enable-new-dtags  -Wl,--hash-style=gnu -Wl,-flto" # Bdirect # -zdynsort # -hashvals # -Wl,-flto ### -Wl,--hash-style=gnu ###  -Wl,--enable-new-dtags
-#LDFLAGS="${LDFLAGS} -B/usr/bin/ld.gold" #use gold linker with clang
-#LDFLAGS="${LDFLAGS} -fuse-ld=gold"      #use gold linker with gcc
+LDFLAGS="${LDFLAGS} -B/usr/bin/ld.gold" #use gold linker with clang
+LDFLAGS="${LDFLAGS} -fuse-ld=gold"      #use gold linker with gcc
 #-- Make Flags: change this for DistCC/SMP systems
-MAKEFLAGS="-j8"
+MAKEFLAGS="-j8 -Otarget"
 #-- Debugging flags
 DEBUG_CFLAGS="-g -fvar-tracking-assignments"
 DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
