update dotfiles for weechat & fstab & asd

--- a/~/.weechat/alias.conf
+++ b/~/.weechat/alias.conf
@@ -1,3 +1,7 @@
+#
+# alias.conf -- weechat v1.0
+#
+
 [cmd]
 AAWAY = "allserv /away"
 AME = "allchan /me"
@@ -6,12 +10,12 @@ ANICK = "allserv /nick"
 BEEP = "print -stderr \a"
 BYE = "quit"
 C = "buffer clear"
+CB = "buffer close"
 CHAT = "dcc chat"
 CL = "buffer clear"
 CLOSE = "buffer close"
-CB = "buffer close"
-EXIT = "quit"
 E = "quit"
+EXIT = "quit"
 IG = "ignore"
 J = "join"
 K = "kick"
