--- a/etc/asd.conf
+++ b/etc/asd.conf
@@ -1,3 +1,3 @@
-WHATTOSYNC=( "/home/lejenome/.cmus" "/home/lejenome/mail" "/home/lejenome/.vimperator/info" "/home/lejenome/.weechat" ) #'/mnt/Others/git/dotfiles/~'
+WHATTOSYNC=( "/home/lejenome/.cmus" "/home/lejenome/mail" "/home/lejenome/.vimperator/info" "/home/lejenome/.weechat" '/mnt/Others/git/dotfiles/~' "/home/lejenome/.local" "/home/lejenome/.config" "/home/lejenome/.urxvt" )
 
 VOLATILE="/dev/shm"
