--- a/etc/asd.conf
+++ b/etc/asd.conf
@@ -1,3 +1,6 @@
-WHATTOSYNC=( "/home/lejenome/.cmus" "/home/lejenome/mail" "/home/lejenome/.vimperator/info" "/home/lejenome/.weechat" '/mnt/Others/git/dotfiles/~' "/home/lejenome/.local" "/home/lejenome/.config" "/home/lejenome/.urxvt" )
+WHATTOSYNC=( "/home/lejenome/.cmus" "/home/lejenome/mail" "/home/lejenome/.vimperator/info" )
+WHATTOSYNC+=( "/home/lejenome/.weechat" '/mnt/Others/git/dotfiles/~' "/home/lejenome/.local" )
+WHATTOSYNC+=( "/home/lejenome/.config" "/home/lejenome/.urxvt" "/home/lejenome/.getmail" )
+WHATTOSYNC+=( "/home/lejenome/.calcurse" )
 
 VOLATILE="/dev/shm"
