add LSB dirs & update i3/TERM.sh & uncomment extra options on firefox & add extra alias to zsh

--- a/~/.weechat/weechat.conf
+++ b/~/.weechat/weechat.conf
@@ -531,10 +531,7 @@ default.buffer = "core;weechat;1"
 default.buffer = "irc;server.freenode;1"
 default.buffer = "irc;server.localhost;1"
 default.buffer = "irc;localhost.&bitlbee;2"
-default.buffer = "irc;freenode.#archlinux;3"
-default.buffer = "irc;freenode.#archlinux-bugs;4"
-default.buffer = "irc;freenode.#ubuntu-tn;5"
-default.window = "1;0;0;0;irc;freenode.#ubuntu-tn"
+default.window = "1;0;0;0;irc;localhost.&bitlbee"
 default.current = on
 
 [notify]
