--- a/~/.weechat/weechat.conf
+++ b/~/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v1.0
+# weechat.conf -- weechat v1.0.1
 #
 
 [debug]
@@ -531,7 +531,11 @@ default.buffer = "core;weechat;1"
 default.buffer = "irc;server.freenode;1"
 default.buffer = "irc;server.localhost;1"
 default.buffer = "irc;localhost.&bitlbee;2"
-default.window = "1;0;0;0;irc;localhost.&bitlbee"
+default.buffer = "irc;localhost.#twitter_lejenome;3"
+default.buffer = "irc;freenode.#archlinux;4"
+default.buffer = "irc;freenode.#archlinux-bugs;5"
+default.buffer = "irc;freenode.#ubuntu-tn;6"
+default.window = "1;0;0;0;irc;freenode.#ubuntu-tn"
 default.current = on
 
 [notify]
