--- a/~/.weechat/alias.conf
+++ b/~/.weechat/alias.conf
@@ -21,6 +21,7 @@ J = "join"
 K = "kick"
 KB = "kickban"
 LEAVE = "part"
+lookaround = "/input insert /me looks around ('-' ) (._. ) (o_o) ( ._.) ( '-')"
 M = "msg"
 MUB = "unban *"
 N = "names"
