--- a/~/.weechat/weechat.conf
+++ b/~/.weechat/weechat.conf
@@ -480,8 +480,8 @@ input.items = " input_prompt,>>,input_text"
 input.position = bottom
 input.priority = 1000
 input.separator = off
-input.size = 1
-input.size_max = 0
+input.size = 0
+input.size_max = 3
 input.type = root
 nicklist.color_bg = default
 nicklist.color_delim = black
@@ -535,7 +535,7 @@ default.buffer = "irc;localhost.#twitter_lejenome;3"
 default.buffer = "irc;freenode.#archlinux;4"
 default.buffer = "irc;freenode.#archlinux-bugs;5"
 default.buffer = "irc;freenode.#ubuntu-tn;6"
-default.window = "1;0;0;0;irc;freenode.#ubuntu-tn"
+default.window = "1;0;0;0;irc;localhost.&bitlbee"
 default.current = on
 
 [notify]
