make better use of tmux and improve urxvt perfermance

--- a/~/.i3/config
+++ b/~/.i3/config
@@ -27,7 +27,8 @@ font xft:Cousine, Icons 7
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvtc
+bindsym $mod+Return exec urxvtc -e zsh ~/.i3/MAIN.sh
+#bindsym $mod+Return exec urxvtc -e zsh -c "exec tmux"
 
 # kill focused window
 bindsym $mod+Shift+Q kill
