--- a/~/.tmux.conf
+++ b/~/.tmux.conf
@@ -1,12 +1,9 @@
 set -g status off
 set -g default-terminal "screen-256color"
-
-# use UTF8
 set -g utf8
 set-window-option -g utf8 on
-
-# set scrollback history to 10000 (10k)
 set -g history-limit 10000
+setw -g mode-keys vi
 
 # explicitly disable mouse control
 setw -g mode-mouse on
@@ -14,12 +11,18 @@ set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
 
-# use vim keybindings in copy mode
-setw -g mode-keys vi
-
 # set pane colors - hilight the active pane
 set-option -g pane-border-fg colour235 #base02
 set-option -g pane-active-border-fg colour240 #base01
+
+# reload ~/.tmux.conf
+unbind ^R
+bind ^R source-file ~/.tmux.conf \; display "Reloaded!"
+
+# copy/paste/urlview : c/v/u
+bind c run "tmux save-buffer - | xsel -ib"
+bind v run "tmux set-buffer -- \"$(xsel -ob)\"; tmux paste-buffer"
+bind-key u capture-pane \; save-buffer /tmp/tmux-buffer \; new-window -n "urlview" '$SHELL -c "urlview < /tmp/tmux-buffer"'
 
 # Set the prefix to ^A.
 #unbind C-b
@@ -33,11 +36,9 @@ set-option -g pane-active-border-fg colour240 #base01
 #unbind x
 #bind x lock-server
 
-# screen ^C c
+# screen ^C
 unbind ^C
 bind ^C new-window
-unbind c
-bind c new-window
 
 # detach ^D d
 unbind ^D
@@ -122,7 +123,3 @@ bind ^H split-window -h
 # kill-pane
 unbind ^X
 bind ^X killp
-
-# reload ~/.tmux.conf
-unbind ^R
-bind ^R source-file ~/.tmux.conf \; display "Reloaded!"
