--- a/~/.weechat/weechat.conf
+++ b/~/.weechat/weechat.conf
@@ -535,7 +535,7 @@ default.buffer = "irc;localhost.#twitter_lejenome;3"
 default.buffer = "irc;freenode.#archlinux;4"
 default.buffer = "irc;freenode.#archlinux-bugs;5"
 default.buffer = "irc;freenode.#ubuntu-tn;6"
-default.window = "1;0;0;0;irc;localhost.&bitlbee"
+default.window = "1;0;0;0;irc;freenode.#ubuntu-tn"
 default.current = on
 
 [notify]
