add linux-3.17 support on linux config file & update url_handler.sh & tmux.conf

--- a/~/.tmux.conf
+++ b/~/.tmux.conf
@@ -4,6 +4,7 @@ set -g utf8
 set-window-option -g utf8 on
 set -g history-limit 10000
 setw -g mode-keys vi
+setw -g aggressive-resize on
 
 # explicitly disable mouse control
 setw -g mode-mouse on
