--- a/~/.config/newsbeuter/config
+++ b/~/.config/newsbeuter/config
@@ -7,7 +7,14 @@ auto-reload yes
 reload-time 5
 # external-url-viewer "urlview"
 # mark-as-read-on-hover yes
+# show-read-articles no
+max-items 50
 cache-file ~/.local/share/newsbeuter/cache.db
+cleanup-on-quit yes
+
+notify-always yes
+notify-format "%n"
+notify-program ~/.conky/feeds.sh
 
 # urls-source "newsblur"
 # newsblur-login "??"
