add pokoy dotfile

--- a/~/.mozilla/firefox/profiles.ini
+++ b/~/.mozilla/firefox/profiles.ini
@@ -6,3 +6,9 @@ Name=default
 IsRelative=1
 Path=default
 Default=1
+
+[Profile1]
+Name=default-chrome-debugger
+IsRelative=1
+Path=iivf0n2q.default-chrome-debugger
+
