make mpd/ncmpcpp the default music player

--- a/~/.i3/config
+++ b/~/.i3/config
@@ -169,10 +169,10 @@ colors {
 bindsym XF86AudioMute exec "amixer set Master toggle"
 bindsym XF86AudioRaiseVolume exec "amixer set Master 5%+"
 bindsym XF86AudioLowerVolume exec "amixer set Master 5%-"
-bindsym XF86AudioPlay exec "cmus-remote -u"
-bindsym XF86AudioStop exec "cmus-remote -s"
-bindsym XF86AudioNext exec "cmus-remote -n"
-bindsym XF86AudioPrev exec "cmus-remote -r"
+bindsym XF86AudioPlay exec "mpc toggle"
+bindsym XF86AudioStop exec "mpc stop"
+bindsym XF86AudioNext exec "mpc next"
+bindsym XF86AudioPrev exec "mpc prev"
 bindsym XF86MonBrightnessUp    exec  "xbacklight -inc 10"
 bindsym XF86MonBrightnessDown  exec  "xbacklight -dec 10"
 bindsym XF86TouchpadToggle exec "synclient TouchpadOff=$(synclient | awk '/TouchpadOff/ {print ($3+1)%2}')"
