--- a/etc/bitlbee/bitlbee.conf
+++ b/etc/bitlbee/bitlbee.conf
@@ -10,23 +10,18 @@
 ##    child processes. This should be pretty safe and reliable to use instead
 ##    of inetd mode.
 ##
-# RunMode = Inetd
+RunMode = ForkDaemon
 
 User = bitlbee
 
-## DaemonPort/DaemonInterface:
-##
-## For daemon mode, you can specify on what interface and port the daemon
-## should be listening for connections.
-##
-# DaemonInterface = 0.0.0.0
-# DaemonPort = 6667
+DaemonInterface = 0.0.0.0
+DaemonPort = 6667
 
-# ClientInterface = 0.0.0.0
+ClientInterface = 0.0.0.0
 
 AuthMode = Open
 
-# MotdFile = /etc/bitlbee/motd.txt
+MotdFile = /etc/bitlbee/motd.txt
 
 ConfigDir = /var/lib/bitlbee
 
