--- a/~/.config/systemd/user/newsbeuter.service
+++ b/~/.config/systemd/user/newsbeuter.service
@@ -1,8 +1,9 @@
 [Unit]
-Description=Get mails using getmails command
+Description=Clean and update newsbeuter feeds
 JobTimeoutSec=2min
 
 [Service]
+ExecStart=/usr/bin/newsbeuter -X
 ExecStart=/usr/bin/newsbeuter -x reload
 Nice=19
 IOSchedulingClass=best-effort
