add systemd' logind config

--- a/etc/systemd/journald.conf
+++ b/etc/systemd/journald.conf
@@ -15,12 +15,12 @@ SplitMode=uid
 SystemMaxUse=10M
 RuntimeMaxUse=20M
 SyncIntervalSec=10m
+SystemMaxFileSize=1M
+RuntimeMaxFileSize=1M
 #RuntimeKeepFree=
 #SystemKeepFree=
 #RateLimitInterval=30s
 #RateLimitBurst=1000
-#SystemMaxFileSize=
-#RuntimeMaxFileSize=
 #MaxRetentionSec=
 #MaxFileSec=1month
 #ForwardToSyslog=yes
