--- a/etc/systemd/logind.conf
+++ b/etc/systemd/logind.conf
@@ -11,12 +11,12 @@
 NAutoVTs=4
 ReserveVT=4
 KillUserProcesses=no
-IdleAction=suspend
-IdleActionSec=20min
 HandlePowerKey=poweroff
 HandleSuspendKey=suspend
 HandleHibernateKey=hibernate
 HandleLidSwitch=suspend
+#IdleAction=suspend
+#IdleActionSec=20min
 
 #KillOnlyUsers=
 #KillExcludeUsers=root
