fix color on todo.cfg

--- a/~/.todo.cfg
+++ b/~/.todo.cfg
@@ -75,7 +75,7 @@ export UNDERLINE='\\033[4m'
 export PRI_A=$YELLOW        # color for A priority
 export PRI_B=$GREEN         # color for B priority
 export PRI_C=$LIGHT_BLUE    # color for C priority
-export PRI_D=...            # define your own
+export PRI_D=$DEFAULT       # define your own
 export PRI_X=$WHITE         # color unless explicitly defined
 ### sample of combining foreground and background
 #export PRI_A=$HOTPINK$MEDIUMGREY_BG$UNDERLINE
