--- a/~/.conkyrc
+++ b/~/.conkyrc
@@ -12,7 +12,7 @@ TEXT
 
 [\
 # CPU temperature:
-{"full_text":"CPU \uF109","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF109","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${if_match ${acpitemp}<45}${acpitemp}°C","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
 {"full_text":"${if_match ${acpitemp}<55}${acpitemp}°C","color":"\#b27d12","separator":false,"separator_block_width":6},\
@@ -21,10 +21,10 @@ TEXT
 {"full_text":"${else}"},\
 {"full_text":"${endif}${endif}${endif}"},\
 #NETWORK STRENGTH \uF012
-{"full_text":"NET \uF1eb","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF1eb","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${execi 2 ~/.conky/getNetwokStrength.sh}","color":"\#909737","separator":false},\
 # Download:
-{"full_text":"DOWN \uF0ed","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF0ed","color":"\#949494","separator":false,"separator_block_width":6},\
 ${if_match ${downspeedf enp9s0}>0} \
 {"full_text":"${if_match ${downspeedf enp9s0}<1000}${downspeed enp9s0}","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
@@ -50,7 +50,7 @@ ${else}\
 ${endif}\
 ${endif}\
 # Upload:
-{"full_text":"UP \uF0ee","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF0ee","color":"\#949494","separator":false,"separator_block_width":6},\
 ${if_match ${upspeedf enp9s0}>0} \
 {"full_text":"${if_match ${upspeedf enp9s0}<1000}${upspeed enp9s0}","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
@@ -76,7 +76,7 @@ ${else}\
 ${endif}\
 ${endif}\
 # Memory: \uF30d
-{"full_text":"MEM \uF1c0","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF1c0","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${if_match ${memperc}<30} ${memeasyfree}","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
 {"full_text":"${if_match ${memperc}<70} ${memeasyfree}","color":"\#b27d12","separator":false,"separator_block_width":6},\
@@ -84,7 +84,7 @@ ${endif}\
 {"full_text":"${if_match ${memperc}>=70} ${memeasyfree}","color":"\#924020","separator":false,"separator_block_width":6},\
 {"full_text":"${endif}${endif}${endif}"},\
 # CPU:
-{"full_text":"CPU \uF0e4","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF0e4","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${if_match ${cpu cpu0}<50}${cpu cpu0}%","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
 {"full_text":"${if_match ${cpu cpu0}<60E}${cpu cpu0}%","color":"\#b27d12","separator":false,"separator_block_width":6},\
@@ -92,10 +92,10 @@ ${endif}\
 {"full_text":"${if_match ${cpu cpu0}<=100}${cpu cpu0}%","color":"\#924020","separator":false,"separator_block_width":6},\
 {"full_text":"${endif}${endif}${endif}"},\
 # Weather: \uF3b6
-{"full_text":"T \uF185","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF185","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${execpi 3600 ~/.conky/weather.sh}°","color":"\#909737","separator":false,"separator_block_width":6},\
 # Mail: \uF1fa
-{"full_text":"MAIL \uF3e5","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF3e5","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${if_match ${execpi 30 ls ~/mail/new |wc -l}<=0}${execpi 30 ls ~/mail/new |wc -l}","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
 {"full_text":"${if_match ${execpi 30 ls ~/mail/new |wc -l}<=2}${execpi 30 ls ~/mail/new |wc -l}","color":"\#b27d12","separator":false,"separator_block_width":6},\
@@ -103,7 +103,7 @@ ${endif}\
 {"full_text":"${if_match ${execpi 30 ls ~/mail/new |wc -l}>2}${execpi 30 ls ~/mail/new |wc -l}","color":"\#924020","separator":false,"separator_block_width":6},\
 {"full_text":"${endif}${endif}${endif}"},\
 # RSS
-{"full_text":"RSS \uF09e","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF09e","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${if_match ${execpi 60 newsbeuter -x print-unread | grep -o "[[:digit:]]*" || echo 0}>0}"},\
 {"full_text":"${if_match ${execpi 60 newsbeuter -x print-unread | grep -o "[[:digit:]]*"}<=10}${execpi 60 newsbeuter -x print-unread | grep -o "[[:digit:]]*"}","color":"\#b27d12","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
@@ -112,12 +112,12 @@ ${endif}\
 {"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${endif}"},\
 #TODO.TXT
-{"full_text":"TODO \uF03A","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF03A","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${execpi 30 todo.sh ls | grep -i "(A)" | wc -l}","color":"\#924020","separator":false,"separator_block_width":6},\
 {"full_text":"${execpi 30 todo.sh ls | grep -i "(B)" | wc -l}","color":"\#b27d12","separator":false,"separator_block_width":6},\
 {"full_text":"${execpi 30 todo.sh ls | wc -l}","color":"\#909737","separator":false,"separator_block_width":6},\
 # Battery:
-{"full_text":"BAT \uF214","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF214","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${if_match ${battery_percent}<30}${battery_percent}%","color":"\#924020","separator":false,"separator_block_width":6},\
 {"full_text":"${else}"},\
 {"full_text":"${if_match ${battery_percent}<70}${battery_percent}%","color":"\#b27d12","separator":false,"separator_block_width":6},\
@@ -125,7 +125,7 @@ ${endif}\
 {"full_text":"${if_match ${battery_percent}>=70}${battery_percent}%","color":"\#909737","separator":false,"separator_block_width":6},\
 {"full_text":"${endif}${endif}${endif}"},\
 # Volume:
-{"full_text":"VOL \uF028","color":"\#949494","separator":false,"separator_block_width":6},\
+{"full_text":"\uF028","color":"\#949494","separator":false,"separator_block_width":6},\
 {"full_text":"${execi 1 amixer sget Master,0 | egrep -o '([0-9]+%|\[(on|off)\])' | sed ':a;N;$!ba;s/\n/ /g'}","color":"\#909737","separator":false},\
 # Date:
 {"full_text":"|","color":"\#949494","separator":false,"separator_block_width":6},\
