update connman conf file

--- a/etc/connman/main.conf
+++ b/etc/connman/main.conf
@@ -4,4 +4,4 @@ AllowHostnameUpdates=false
 BackgroundScanning=true
 DefaultAutoConnectTechnologies=wifi,ethernet,cellular
 
-NetworkInterfaceBlacklist=vmnet,vboxnet,virbr,ifb,docker0
+NetworkInterfaceBlacklist=vmnet,vboxnet,virbr,ifb,docker0,veth38dc2b6
